[package]
name = "str0m-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# str0m = "0.1.0"
str0m = { git = "https://github.com/biceneutron/str0m.git", branch ="fix/dcep-message-type" }
rouille = { version = "3.5.0", features = ["ssl"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std"] }
systemstat = "0.2.2"
serde_json = "1.0"