[package]
name = "webrtc-unreliable-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# webrtc-unreliable = {version = "0.5.3"}
# webrtc-unreliable = { path = "../../webrtc-unreliable" }
webrtc-unreliable = { git = "https://github.com/biceneutron/webrtc-unreliable.git", branch = "ssl-hack"}
clap = "3.0"
env_logger = "0.9"
futures = { version = "0.3" }
hyper = { version = "0.14", features = ["http1", "runtime", "server", "stream"] }
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }
log = "0.4"
webrtc = "0.8.0"
reqwest = "0.11.18"
tinyjson = "2.5.1"
regex = "1.9.1"
bytes = "1.4.0"